--- a/hobby.html
+++ b/hobby.html
@@ -15,11 +15,11 @@
     <tbody>
     <tr>
         <td>Reading</td>
-        <td><img src="./reading.png" width="200" height="200" alt=" i read"></td>
+        <td><img src="reading.png" width="200" height="200" alt=" i read"></td>
     </tr>
     <tr>
         <td>socialising with friends</td>
-        <td><img src="./socializing.png"  width="200" height="200" alt=" ia m social"></td>
+        <td><img src="socializing.png"  width="200" height="200" alt=" ia m social"></td>
     </tr>
     </tbody>
 </table>
