--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>personal website</title>
         <link rel="stylesheet" type = "text/css" href="style.css">
+         <link rel="shortcut icon" href="pic1.png" type="image/x-icon">
     </head>
     <body>
         <a href="bio.html"><div class="bio"><p>My Bio</p></div></a>
