--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>MY PERSONAL WEBSITE</title>
+     <link rel="shortcut icon" href="pic1.png" type="image/x-icon">
 </head>
 <body>
     <p>you can contact me through my telephone number 0787490293</p>
