--- a/hobby.html
+++ b/hobby.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>MY HOBBIES AND INTERESTS</title>
+     <link rel="shortcut icon" href="pic1.png" type="image/x-icon">
 </head>
 <body>
 <table border="2">
